src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> top_level_list
Rule 2     top_level_list -> top_level_list top_level_stmt
Rule 3     top_level_list -> top_level_stmt
Rule 4     top_level_stmt -> component_def
Rule 5     top_level_stmt -> shortcut_def
Rule 6     top_level_stmt -> graph_def
Rule 7     top_level_stmt -> import_def
Rule 8     top_level_stmt -> const_def
Rule 9     import_def -> KW_IMPORT STRING SEMICOLON
Rule 10    const_def -> KW_CONST VAR_ID EQUALS value SEMICOLON
Rule 11    graph_def -> strict_opt graph_type id_opt LBRACE graph_body RBRACE
Rule 12    component_def -> KW_COMPONENT ID LPAREN param_list RPAREN extends_opt LBRACE graph_body RBRACE
Rule 13    extends_opt -> KW_EXTENDS ID LPAREN arg_list RPAREN
Rule 14    extends_opt -> empty
Rule 15    param_list -> ID COMMA param_list
Rule 16    param_list -> ID
Rule 17    param_list -> empty
Rule 18    shortcut_def -> KW_DEFSHORTCUT CUSTOM_OP FAT_ARROW edge_op attr_block_opt semi_opt
Rule 19    graph_type -> KW_GRAPH
Rule 20    graph_type -> KW_DIGRAPH
Rule 21    id_opt -> ID
Rule 22    id_opt -> empty
Rule 23    graph_body -> graph_body statement
Rule 24    graph_body -> statement
Rule 25    node_id -> ID
Rule 26    node_id -> VAR_ID
Rule 27    node_id -> STRING
Rule 28    edge_op -> ARROW
Rule 29    edge_op -> EDGE_UNDIR
Rule 30    edge_op -> CUSTOM_OP
Rule 31    subgraph -> KW_SUBGRAPH id_opt LBRACE graph_body RBRACE
Rule 32    subgraph -> LBRACE graph_body RBRACE
Rule 33    global_type -> KW_NODE
Rule 34    global_type -> KW_EDGE
Rule 35    global_type -> KW_GRAPH
Rule 36    statement -> node_id edge_op node_id attr_block_opt semi_opt
Rule 37    statement -> node_id attr_block_opt semi_opt
Rule 38    statement -> node_id LPAREN arg_list RPAREN semi_opt
Rule 39    statement -> subgraph
Rule 40    statement -> global_type attr_block_opt semi_opt
Rule 41    statement -> for_loop
Rule 42    statement -> attr semi_opt
Rule 43    for_loop -> KW_FOR VAR_ID KW_IN range LBRACE graph_body RBRACE
Rule 44    range -> KW_RANGE LPAREN NUMBER DOTDOT NUMBER RPAREN
Rule 45    semi_opt -> SEMICOLON
Rule 46    semi_opt -> empty
Rule 47    value -> ID
Rule 48    value -> STRING
Rule 49    value -> VAR_ID
Rule 50    value -> NUMBER
Rule 51    arg_list -> value COMMA arg_list
Rule 52    arg_list -> value
Rule 53    arg_list -> empty
Rule 54    attr -> ID EQUALS value
Rule 55    attr_list -> attr COMMA attr_list
Rule 56    attr_list -> attr
Rule 57    attr_block_opt -> LBRACKET attr_list RBRACKET
Rule 58    attr_block_opt -> empty
Rule 59    strict_opt -> KW_STRICT
Rule 60    strict_opt -> empty
Rule 61    empty -> <empty>

Terminals, with rules where they appear

ARROW                : 28
COMMA                : 15 51 55
CUSTOM_OP            : 18 30
DOTDOT               : 44
EDGE_UNDIR           : 29
EQUALS               : 10 54
FAT_ARROW            : 18
ID                   : 12 13 15 16 21 25 47 54
KW_COMPONENT         : 12
KW_CONST             : 10
KW_DEFSHORTCUT       : 18
KW_DIGRAPH           : 20
KW_EDGE              : 34
KW_EXTENDS           : 13
KW_FOR               : 43
KW_GRAPH             : 19 35
KW_IMPORT            : 9
KW_IN                : 43
KW_NODE              : 33
KW_RANGE             : 44
KW_STRICT            : 59
KW_SUBGRAPH          : 31
LBRACE               : 11 12 31 32 43
LBRACKET             : 57
LPAREN               : 12 13 38 44
NUMBER               : 44 44 50
RBRACE               : 11 12 31 32 43
RBRACKET             : 57
RPAREN               : 12 13 38 44
SEMICOLON            : 9 10 45
STRING               : 9 27 48
VAR_ID               : 10 26 43 49
error                : 

Nonterminals, with rules where they appear

arg_list             : 13 38 51
attr                 : 42 55 56
attr_block_opt       : 18 36 37 40
attr_list            : 55 57
component_def        : 4
const_def            : 8
edge_op              : 18 36
empty                : 14 17 22 46 53 58 60
extends_opt          : 12
for_loop             : 41
global_type          : 40
graph_body           : 11 12 23 31 32 43
graph_def            : 6
graph_type           : 11
id_opt               : 11 31
import_def           : 7
node_id              : 36 36 37 38
param_list           : 12 15
program              : 0
range                : 43
semi_opt             : 18 36 37 38 40 42
shortcut_def         : 5
statement            : 23 24
strict_opt           : 11
subgraph             : 39
top_level_list       : 1 2
top_level_stmt       : 2 3
value                : 10 51 52 54

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . top_level_list
    (2) top_level_list -> . top_level_list top_level_stmt
    (3) top_level_list -> . top_level_stmt
    (4) top_level_stmt -> . component_def
    (5) top_level_stmt -> . shortcut_def
    (6) top_level_stmt -> . graph_def
    (7) top_level_stmt -> . import_def
    (8) top_level_stmt -> . const_def
    (12) component_def -> . KW_COMPONENT ID LPAREN param_list RPAREN extends_opt LBRACE graph_body RBRACE
    (18) shortcut_def -> . KW_DEFSHORTCUT CUSTOM_OP FAT_ARROW edge_op attr_block_opt semi_opt
    (11) graph_def -> . strict_opt graph_type id_opt LBRACE graph_body RBRACE
    (9) import_def -> . KW_IMPORT STRING SEMICOLON
    (10) const_def -> . KW_CONST VAR_ID EQUALS value SEMICOLON
    (59) strict_opt -> . KW_STRICT
    (60) strict_opt -> . empty
    (61) empty -> .

    KW_COMPONENT    shift and go to state 9
    KW_DEFSHORTCUT  shift and go to state 10
    KW_IMPORT       shift and go to state 12
    KW_CONST        shift and go to state 13
    KW_STRICT       shift and go to state 14
    KW_GRAPH        reduce using rule 61 (empty -> .)
    KW_DIGRAPH      reduce using rule 61 (empty -> .)

    program                        shift and go to state 1
    top_level_list                 shift and go to state 2
    top_level_stmt                 shift and go to state 3
    component_def                  shift and go to state 4
    shortcut_def                   shift and go to state 5
    graph_def                      shift and go to state 6
    import_def                     shift and go to state 7
    const_def                      shift and go to state 8
    strict_opt                     shift and go to state 11
    empty                          shift and go to state 15

state 1

    (0) S' -> program .



state 2

    (1) program -> top_level_list .
    (2) top_level_list -> top_level_list . top_level_stmt
    (4) top_level_stmt -> . component_def
    (5) top_level_stmt -> . shortcut_def
    (6) top_level_stmt -> . graph_def
    (7) top_level_stmt -> . import_def
    (8) top_level_stmt -> . const_def
    (12) component_def -> . KW_COMPONENT ID LPAREN param_list RPAREN extends_opt LBRACE graph_body RBRACE
    (18) shortcut_def -> . KW_DEFSHORTCUT CUSTOM_OP FAT_ARROW edge_op attr_block_opt semi_opt
    (11) graph_def -> . strict_opt graph_type id_opt LBRACE graph_body RBRACE
    (9) import_def -> . KW_IMPORT STRING SEMICOLON
    (10) const_def -> . KW_CONST VAR_ID EQUALS value SEMICOLON
    (59) strict_opt -> . KW_STRICT
    (60) strict_opt -> . empty
    (61) empty -> .

    $end            reduce using rule 1 (program -> top_level_list .)
    KW_COMPONENT    shift and go to state 9
    KW_DEFSHORTCUT  shift and go to state 10
    KW_IMPORT       shift and go to state 12
    KW_CONST        shift and go to state 13
    KW_STRICT       shift and go to state 14
    KW_GRAPH        reduce using rule 61 (empty -> .)
    KW_DIGRAPH      reduce using rule 61 (empty -> .)

    top_level_stmt                 shift and go to state 16
    component_def                  shift and go to state 4
    shortcut_def                   shift and go to state 5
    graph_def                      shift and go to state 6
    import_def                     shift and go to state 7
    const_def                      shift and go to state 8
    strict_opt                     shift and go to state 11
    empty                          shift and go to state 15

state 3

    (3) top_level_list -> top_level_stmt .

    KW_COMPONENT    reduce using rule 3 (top_level_list -> top_level_stmt .)
    KW_DEFSHORTCUT  reduce using rule 3 (top_level_list -> top_level_stmt .)
    KW_IMPORT       reduce using rule 3 (top_level_list -> top_level_stmt .)
    KW_CONST        reduce using rule 3 (top_level_list -> top_level_stmt .)
    KW_STRICT       reduce using rule 3 (top_level_list -> top_level_stmt .)
    KW_GRAPH        reduce using rule 3 (top_level_list -> top_level_stmt .)
    KW_DIGRAPH      reduce using rule 3 (top_level_list -> top_level_stmt .)
    $end            reduce using rule 3 (top_level_list -> top_level_stmt .)


state 4

    (4) top_level_stmt -> component_def .

    KW_COMPONENT    reduce using rule 4 (top_level_stmt -> component_def .)
    KW_DEFSHORTCUT  reduce using rule 4 (top_level_stmt -> component_def .)
    KW_IMPORT       reduce using rule 4 (top_level_stmt -> component_def .)
    KW_CONST        reduce using rule 4 (top_level_stmt -> component_def .)
    KW_STRICT       reduce using rule 4 (top_level_stmt -> component_def .)
    KW_GRAPH        reduce using rule 4 (top_level_stmt -> component_def .)
    KW_DIGRAPH      reduce using rule 4 (top_level_stmt -> component_def .)
    $end            reduce using rule 4 (top_level_stmt -> component_def .)


state 5

    (5) top_level_stmt -> shortcut_def .

    KW_COMPONENT    reduce using rule 5 (top_level_stmt -> shortcut_def .)
    KW_DEFSHORTCUT  reduce using rule 5 (top_level_stmt -> shortcut_def .)
    KW_IMPORT       reduce using rule 5 (top_level_stmt -> shortcut_def .)
    KW_CONST        reduce using rule 5 (top_level_stmt -> shortcut_def .)
    KW_STRICT       reduce using rule 5 (top_level_stmt -> shortcut_def .)
    KW_GRAPH        reduce using rule 5 (top_level_stmt -> shortcut_def .)
    KW_DIGRAPH      reduce using rule 5 (top_level_stmt -> shortcut_def .)
    $end            reduce using rule 5 (top_level_stmt -> shortcut_def .)


state 6

    (6) top_level_stmt -> graph_def .

    KW_COMPONENT    reduce using rule 6 (top_level_stmt -> graph_def .)
    KW_DEFSHORTCUT  reduce using rule 6 (top_level_stmt -> graph_def .)
    KW_IMPORT       reduce using rule 6 (top_level_stmt -> graph_def .)
    KW_CONST        reduce using rule 6 (top_level_stmt -> graph_def .)
    KW_STRICT       reduce using rule 6 (top_level_stmt -> graph_def .)
    KW_GRAPH        reduce using rule 6 (top_level_stmt -> graph_def .)
    KW_DIGRAPH      reduce using rule 6 (top_level_stmt -> graph_def .)
    $end            reduce using rule 6 (top_level_stmt -> graph_def .)


state 7

    (7) top_level_stmt -> import_def .

    KW_COMPONENT    reduce using rule 7 (top_level_stmt -> import_def .)
    KW_DEFSHORTCUT  reduce using rule 7 (top_level_stmt -> import_def .)
    KW_IMPORT       reduce using rule 7 (top_level_stmt -> import_def .)
    KW_CONST        reduce using rule 7 (top_level_stmt -> import_def .)
    KW_STRICT       reduce using rule 7 (top_level_stmt -> import_def .)
    KW_GRAPH        reduce using rule 7 (top_level_stmt -> import_def .)
    KW_DIGRAPH      reduce using rule 7 (top_level_stmt -> import_def .)
    $end            reduce using rule 7 (top_level_stmt -> import_def .)


state 8

    (8) top_level_stmt -> const_def .

    KW_COMPONENT    reduce using rule 8 (top_level_stmt -> const_def .)
    KW_DEFSHORTCUT  reduce using rule 8 (top_level_stmt -> const_def .)
    KW_IMPORT       reduce using rule 8 (top_level_stmt -> const_def .)
    KW_CONST        reduce using rule 8 (top_level_stmt -> const_def .)
    KW_STRICT       reduce using rule 8 (top_level_stmt -> const_def .)
    KW_GRAPH        reduce using rule 8 (top_level_stmt -> const_def .)
    KW_DIGRAPH      reduce using rule 8 (top_level_stmt -> const_def .)
    $end            reduce using rule 8 (top_level_stmt -> const_def .)


state 9

    (12) component_def -> KW_COMPONENT . ID LPAREN param_list RPAREN extends_opt LBRACE graph_body RBRACE

    ID              shift and go to state 17


state 10

    (18) shortcut_def -> KW_DEFSHORTCUT . CUSTOM_OP FAT_ARROW edge_op attr_block_opt semi_opt

    CUSTOM_OP       shift and go to state 18


state 11

    (11) graph_def -> strict_opt . graph_type id_opt LBRACE graph_body RBRACE
    (19) graph_type -> . KW_GRAPH
    (20) graph_type -> . KW_DIGRAPH

    KW_GRAPH        shift and go to state 20
    KW_DIGRAPH      shift and go to state 21

    graph_type                     shift and go to state 19

state 12

    (9) import_def -> KW_IMPORT . STRING SEMICOLON

    STRING          shift and go to state 22


state 13

    (10) const_def -> KW_CONST . VAR_ID EQUALS value SEMICOLON

    VAR_ID          shift and go to state 23


state 14

    (59) strict_opt -> KW_STRICT .

    KW_GRAPH        reduce using rule 59 (strict_opt -> KW_STRICT .)
    KW_DIGRAPH      reduce using rule 59 (strict_opt -> KW_STRICT .)


state 15

    (60) strict_opt -> empty .

    KW_GRAPH        reduce using rule 60 (strict_opt -> empty .)
    KW_DIGRAPH      reduce using rule 60 (strict_opt -> empty .)


state 16

    (2) top_level_list -> top_level_list top_level_stmt .

    KW_COMPONENT    reduce using rule 2 (top_level_list -> top_level_list top_level_stmt .)
    KW_DEFSHORTCUT  reduce using rule 2 (top_level_list -> top_level_list top_level_stmt .)
    KW_IMPORT       reduce using rule 2 (top_level_list -> top_level_list top_level_stmt .)
    KW_CONST        reduce using rule 2 (top_level_list -> top_level_list top_level_stmt .)
    KW_STRICT       reduce using rule 2 (top_level_list -> top_level_list top_level_stmt .)
    KW_GRAPH        reduce using rule 2 (top_level_list -> top_level_list top_level_stmt .)
    KW_DIGRAPH      reduce using rule 2 (top_level_list -> top_level_list top_level_stmt .)
    $end            reduce using rule 2 (top_level_list -> top_level_list top_level_stmt .)


state 17

    (12) component_def -> KW_COMPONENT ID . LPAREN param_list RPAREN extends_opt LBRACE graph_body RBRACE

    LPAREN          shift and go to state 24


state 18

    (18) shortcut_def -> KW_DEFSHORTCUT CUSTOM_OP . FAT_ARROW edge_op attr_block_opt semi_opt

    FAT_ARROW       shift and go to state 25


state 19

    (11) graph_def -> strict_opt graph_type . id_opt LBRACE graph_body RBRACE
    (21) id_opt -> . ID
    (22) id_opt -> . empty
    (61) empty -> .

    ID              shift and go to state 27
    LBRACE          reduce using rule 61 (empty -> .)

    id_opt                         shift and go to state 26
    empty                          shift and go to state 28

state 20

    (19) graph_type -> KW_GRAPH .

    ID              reduce using rule 19 (graph_type -> KW_GRAPH .)
    LBRACE          reduce using rule 19 (graph_type -> KW_GRAPH .)


state 21

    (20) graph_type -> KW_DIGRAPH .

    ID              reduce using rule 20 (graph_type -> KW_DIGRAPH .)
    LBRACE          reduce using rule 20 (graph_type -> KW_DIGRAPH .)


state 22

    (9) import_def -> KW_IMPORT STRING . SEMICOLON

    SEMICOLON       shift and go to state 29


state 23

    (10) const_def -> KW_CONST VAR_ID . EQUALS value SEMICOLON

    EQUALS          shift and go to state 30


state 24

    (12) component_def -> KW_COMPONENT ID LPAREN . param_list RPAREN extends_opt LBRACE graph_body RBRACE
    (15) param_list -> . ID COMMA param_list
    (16) param_list -> . ID
    (17) param_list -> . empty
    (61) empty -> .

    ID              shift and go to state 31
    RPAREN          reduce using rule 61 (empty -> .)

    param_list                     shift and go to state 32
    empty                          shift and go to state 33

state 25

    (18) shortcut_def -> KW_DEFSHORTCUT CUSTOM_OP FAT_ARROW . edge_op attr_block_opt semi_opt
    (28) edge_op -> . ARROW
    (29) edge_op -> . EDGE_UNDIR
    (30) edge_op -> . CUSTOM_OP

    ARROW           shift and go to state 36
    EDGE_UNDIR      shift and go to state 37
    CUSTOM_OP       shift and go to state 34

    edge_op                        shift and go to state 35

state 26

    (11) graph_def -> strict_opt graph_type id_opt . LBRACE graph_body RBRACE

    LBRACE          shift and go to state 38


state 27

    (21) id_opt -> ID .

    LBRACE          reduce using rule 21 (id_opt -> ID .)


state 28

    (22) id_opt -> empty .

    LBRACE          reduce using rule 22 (id_opt -> empty .)


state 29

    (9) import_def -> KW_IMPORT STRING SEMICOLON .

    KW_COMPONENT    reduce using rule 9 (import_def -> KW_IMPORT STRING SEMICOLON .)
    KW_DEFSHORTCUT  reduce using rule 9 (import_def -> KW_IMPORT STRING SEMICOLON .)
    KW_IMPORT       reduce using rule 9 (import_def -> KW_IMPORT STRING SEMICOLON .)
    KW_CONST        reduce using rule 9 (import_def -> KW_IMPORT STRING SEMICOLON .)
    KW_STRICT       reduce using rule 9 (import_def -> KW_IMPORT STRING SEMICOLON .)
    KW_GRAPH        reduce using rule 9 (import_def -> KW_IMPORT STRING SEMICOLON .)
    KW_DIGRAPH      reduce using rule 9 (import_def -> KW_IMPORT STRING SEMICOLON .)
    $end            reduce using rule 9 (import_def -> KW_IMPORT STRING SEMICOLON .)


state 30

    (10) const_def -> KW_CONST VAR_ID EQUALS . value SEMICOLON
    (47) value -> . ID
    (48) value -> . STRING
    (49) value -> . VAR_ID
    (50) value -> . NUMBER

    ID              shift and go to state 41
    STRING          shift and go to state 42
    VAR_ID          shift and go to state 39
    NUMBER          shift and go to state 43

    value                          shift and go to state 40

state 31

    (15) param_list -> ID . COMMA param_list
    (16) param_list -> ID .

    COMMA           shift and go to state 44
    RPAREN          reduce using rule 16 (param_list -> ID .)


state 32

    (12) component_def -> KW_COMPONENT ID LPAREN param_list . RPAREN extends_opt LBRACE graph_body RBRACE

    RPAREN          shift and go to state 45


state 33

    (17) param_list -> empty .

    RPAREN          reduce using rule 17 (param_list -> empty .)


state 34

    (30) edge_op -> CUSTOM_OP .

    LBRACKET        reduce using rule 30 (edge_op -> CUSTOM_OP .)
    SEMICOLON       reduce using rule 30 (edge_op -> CUSTOM_OP .)
    KW_COMPONENT    reduce using rule 30 (edge_op -> CUSTOM_OP .)
    KW_DEFSHORTCUT  reduce using rule 30 (edge_op -> CUSTOM_OP .)
    KW_IMPORT       reduce using rule 30 (edge_op -> CUSTOM_OP .)
    KW_CONST        reduce using rule 30 (edge_op -> CUSTOM_OP .)
    KW_STRICT       reduce using rule 30 (edge_op -> CUSTOM_OP .)
    KW_GRAPH        reduce using rule 30 (edge_op -> CUSTOM_OP .)
    KW_DIGRAPH      reduce using rule 30 (edge_op -> CUSTOM_OP .)
    $end            reduce using rule 30 (edge_op -> CUSTOM_OP .)
    ID              reduce using rule 30 (edge_op -> CUSTOM_OP .)
    VAR_ID          reduce using rule 30 (edge_op -> CUSTOM_OP .)
    STRING          reduce using rule 30 (edge_op -> CUSTOM_OP .)


state 35

    (18) shortcut_def -> KW_DEFSHORTCUT CUSTOM_OP FAT_ARROW edge_op . attr_block_opt semi_opt
    (57) attr_block_opt -> . LBRACKET attr_list RBRACKET
    (58) attr_block_opt -> . empty
    (61) empty -> .

    LBRACKET        shift and go to state 47
    SEMICOLON       reduce using rule 61 (empty -> .)
    KW_COMPONENT    reduce using rule 61 (empty -> .)
    KW_DEFSHORTCUT  reduce using rule 61 (empty -> .)
    KW_IMPORT       reduce using rule 61 (empty -> .)
    KW_CONST        reduce using rule 61 (empty -> .)
    KW_STRICT       reduce using rule 61 (empty -> .)
    KW_GRAPH        reduce using rule 61 (empty -> .)
    KW_DIGRAPH      reduce using rule 61 (empty -> .)
    $end            reduce using rule 61 (empty -> .)

    attr_block_opt                 shift and go to state 46
    empty                          shift and go to state 48

state 36

    (28) edge_op -> ARROW .

    LBRACKET        reduce using rule 28 (edge_op -> ARROW .)
    SEMICOLON       reduce using rule 28 (edge_op -> ARROW .)
    KW_COMPONENT    reduce using rule 28 (edge_op -> ARROW .)
    KW_DEFSHORTCUT  reduce using rule 28 (edge_op -> ARROW .)
    KW_IMPORT       reduce using rule 28 (edge_op -> ARROW .)
    KW_CONST        reduce using rule 28 (edge_op -> ARROW .)
    KW_STRICT       reduce using rule 28 (edge_op -> ARROW .)
    KW_GRAPH        reduce using rule 28 (edge_op -> ARROW .)
    KW_DIGRAPH      reduce using rule 28 (edge_op -> ARROW .)
    $end            reduce using rule 28 (edge_op -> ARROW .)
    ID              reduce using rule 28 (edge_op -> ARROW .)
    VAR_ID          reduce using rule 28 (edge_op -> ARROW .)
    STRING          reduce using rule 28 (edge_op -> ARROW .)


state 37

    (29) edge_op -> EDGE_UNDIR .

    LBRACKET        reduce using rule 29 (edge_op -> EDGE_UNDIR .)
    SEMICOLON       reduce using rule 29 (edge_op -> EDGE_UNDIR .)
    KW_COMPONENT    reduce using rule 29 (edge_op -> EDGE_UNDIR .)
    KW_DEFSHORTCUT  reduce using rule 29 (edge_op -> EDGE_UNDIR .)
    KW_IMPORT       reduce using rule 29 (edge_op -> EDGE_UNDIR .)
    KW_CONST        reduce using rule 29 (edge_op -> EDGE_UNDIR .)
    KW_STRICT       reduce using rule 29 (edge_op -> EDGE_UNDIR .)
    KW_GRAPH        reduce using rule 29 (edge_op -> EDGE_UNDIR .)
    KW_DIGRAPH      reduce using rule 29 (edge_op -> EDGE_UNDIR .)
    $end            reduce using rule 29 (edge_op -> EDGE_UNDIR .)
    ID              reduce using rule 29 (edge_op -> EDGE_UNDIR .)
    VAR_ID          reduce using rule 29 (edge_op -> EDGE_UNDIR .)
    STRING          reduce using rule 29 (edge_op -> EDGE_UNDIR .)


state 38

    (11) graph_def -> strict_opt graph_type id_opt LBRACE . graph_body RBRACE
    (23) graph_body -> . graph_body statement
    (24) graph_body -> . statement
    (36) statement -> . node_id edge_op node_id attr_block_opt semi_opt
    (37) statement -> . node_id attr_block_opt semi_opt
    (38) statement -> . node_id LPAREN arg_list RPAREN semi_opt
    (39) statement -> . subgraph
    (40) statement -> . global_type attr_block_opt semi_opt
    (41) statement -> . for_loop
    (42) statement -> . attr semi_opt
    (25) node_id -> . ID
    (26) node_id -> . VAR_ID
    (27) node_id -> . STRING
    (31) subgraph -> . KW_SUBGRAPH id_opt LBRACE graph_body RBRACE
    (32) subgraph -> . LBRACE graph_body RBRACE
    (33) global_type -> . KW_NODE
    (34) global_type -> . KW_EDGE
    (35) global_type -> . KW_GRAPH
    (43) for_loop -> . KW_FOR VAR_ID KW_IN range LBRACE graph_body RBRACE
    (54) attr -> . ID EQUALS value

    ID              shift and go to state 57
    VAR_ID          shift and go to state 58
    STRING          shift and go to state 59
    KW_SUBGRAPH     shift and go to state 60
    LBRACE          shift and go to state 49
    KW_NODE         shift and go to state 61
    KW_EDGE         shift and go to state 62
    KW_GRAPH        shift and go to state 63
    KW_FOR          shift and go to state 64

    graph_body                     shift and go to state 50
    statement                      shift and go to state 51
    node_id                        shift and go to state 52
    subgraph                       shift and go to state 53
    global_type                    shift and go to state 54
    for_loop                       shift and go to state 55
    attr                           shift and go to state 56

state 39

    (49) value -> VAR_ID .

    SEMICOLON       reduce using rule 49 (value -> VAR_ID .)
    COMMA           reduce using rule 49 (value -> VAR_ID .)
    RPAREN          reduce using rule 49 (value -> VAR_ID .)
    RBRACE          reduce using rule 49 (value -> VAR_ID .)
    ID              reduce using rule 49 (value -> VAR_ID .)
    VAR_ID          reduce using rule 49 (value -> VAR_ID .)
    STRING          reduce using rule 49 (value -> VAR_ID .)
    KW_SUBGRAPH     reduce using rule 49 (value -> VAR_ID .)
    LBRACE          reduce using rule 49 (value -> VAR_ID .)
    KW_NODE         reduce using rule 49 (value -> VAR_ID .)
    KW_EDGE         reduce using rule 49 (value -> VAR_ID .)
    KW_GRAPH        reduce using rule 49 (value -> VAR_ID .)
    KW_FOR          reduce using rule 49 (value -> VAR_ID .)
    RBRACKET        reduce using rule 49 (value -> VAR_ID .)


state 40

    (10) const_def -> KW_CONST VAR_ID EQUALS value . SEMICOLON

    SEMICOLON       shift and go to state 65


state 41

    (47) value -> ID .

    SEMICOLON       reduce using rule 47 (value -> ID .)
    COMMA           reduce using rule 47 (value -> ID .)
    RPAREN          reduce using rule 47 (value -> ID .)
    RBRACE          reduce using rule 47 (value -> ID .)
    ID              reduce using rule 47 (value -> ID .)
    VAR_ID          reduce using rule 47 (value -> ID .)
    STRING          reduce using rule 47 (value -> ID .)
    KW_SUBGRAPH     reduce using rule 47 (value -> ID .)
    LBRACE          reduce using rule 47 (value -> ID .)
    KW_NODE         reduce using rule 47 (value -> ID .)
    KW_EDGE         reduce using rule 47 (value -> ID .)
    KW_GRAPH        reduce using rule 47 (value -> ID .)
    KW_FOR          reduce using rule 47 (value -> ID .)
    RBRACKET        reduce using rule 47 (value -> ID .)


state 42

    (48) value -> STRING .

    SEMICOLON       reduce using rule 48 (value -> STRING .)
    COMMA           reduce using rule 48 (value -> STRING .)
    RPAREN          reduce using rule 48 (value -> STRING .)
    RBRACE          reduce using rule 48 (value -> STRING .)
    ID              reduce using rule 48 (value -> STRING .)
    VAR_ID          reduce using rule 48 (value -> STRING .)
    STRING          reduce using rule 48 (value -> STRING .)
    KW_SUBGRAPH     reduce using rule 48 (value -> STRING .)
    LBRACE          reduce using rule 48 (value -> STRING .)
    KW_NODE         reduce using rule 48 (value -> STRING .)
    KW_EDGE         reduce using rule 48 (value -> STRING .)
    KW_GRAPH        reduce using rule 48 (value -> STRING .)
    KW_FOR          reduce using rule 48 (value -> STRING .)
    RBRACKET        reduce using rule 48 (value -> STRING .)


state 43

    (50) value -> NUMBER .
